# netplancli-rs

./: Cargo.toml
commands/: Cargo.toml
commands/src/: generate.rs  get.rs  lib.rs  set.rs
src/: main.rs
