[package]
name = "netplancli-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["commands"]

[dependencies]
clap = "4.5"
libnetplan = { git = "https://github.com/daniloegea/libnetplan-rs" }
commands = { path = "./commands" }
